# gareth_drone_driver

./: README.md
gareth_drone_bringup/: CMakeLists.txt  package.xml
gareth_drone_bringup/launch/: gareth_drone_bringup.launch  gareth_teraranger_bringup.launch
gareth_dynamixel_control/: CMakeLists.txt  examplePublish.txt  package.xml  resources.txt
gareth_dynamixel_control/config/: tilt.yaml
gareth_dynamixel_control/launch/: controller_manager.launch  start_tilt_controller.launch
gareth_epos_driver/epos_lib/: CMakeLists.txt  package.xml
gareth_epos_driver/gareth_epos_driver/: CMakeLists.txt  CMakeLists.txt.bkup  package.xml
gareth_epos_driver/gareth_epos_driver/include/gareth_epos_driver/: Definitions.h
gareth_epos_driver/gareth_epos_driver/src/: epos_current.cpp  epos_currentANDvelocity.cpp  gareth_epos_driver.cpp  gareth_epos_driver.cpp.beforeAlex  gareth_epos_driver_bkup.cpp
gareth_maxon_description/: CMakeLists.txt  maxon_description.urdf  maxon_upload.launch  package.xml
gareth_pi_diagnostics/: CMakeLists.txt  package.xml
gareth_pi_diagnostics/scripts/: maxonTest.py
